force-app/main/default/objects/Pricing__c/Pricing__c.object-meta.xml
<CustomObject>
    <label>Price</label>
    <nameField>
        <displayFormat>PID-{0000000}</displayFormat>
        <label>Pricing ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>