force-app/main/default/objects/Pricing__c/fields/ConsumerPrice__c.field-meta.xml
<CustomField>
    <fullName>ConsumerPrice__c</fullName>
    <label>Consumer Price</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>