force-app/main/default/objects/Pricing__c/fields/ListRate__c.field-meta.xml
<CustomField>
    <fullName>ListRate__c</fullName>
    <label>List Rate</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>