force-app/main/default/objects/Pricing__c/fields/ProductActive__c.field-meta.xml
<CustomField>
    <fullName>ProductActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ProductActive</label>
    <type>Checkbox</type>
</CustomField>