force-app/main/default/objects/Pricing__c/fields/ProductComponent__c.field-meta.xml
<CustomField>
    <fullName>ProductComponent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Component</label>
    <referenceTo>ProductComponent__c</referenceTo>
    <relationshipLabel>Prices</relationshipLabel>
    <relationshipName>Prices</relationshipName>
    <type>Lookup</type>
</CustomField>