force-app/main/default/objects/Pricing__c/fields/ProductComponentActive__c.field-meta.xml
<CustomField>
    <fullName>ProductComponentActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ProductComponentActive</label>
    <type>Checkbox</type>
</CustomField>