force-app/main/default/objects/Pricing__c/fields/RetriggerPricing__c.field-meta.xml
<CustomField>
    <fullName>RetriggerPricing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retrigger Pricing</label>
    <type>Checkbox</type>
</CustomField>