force-app/main/default/objects/Pricing__c/fields/SubsidiaryRAW__c.field-meta.xml
<CustomField>
    <fullName>SubsidiaryRAW__c</fullName>
    <label>zRemove Subsidiary RAW</label>
    <length>255</length>
    <type>Text</type>
</CustomField>