force-app/main/default/objects/Pricing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Subsidiary__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>EndDate__c</columns>
    <columns>StartDate__c</columns>
    <columns>Product__c</columns>
    <columns>ProductComponent__c</columns>
    <columns>ListRate__c</columns>
    <columns>ExternalId__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>